Top of page spacing fix

--- a/wp-content/themes/thepoliticalsage/assets/styles/layout/_header.scss
+++ b/wp-content/themes/thepoliticalsage/assets/styles/layout/_header.scss
@@ -14,7 +14,7 @@
 		100% { top: 0; opacity: 1; }
 	}
 
-	body {
+	#wrapper {
 		margin-top: $header-height;
 	}
 	
