--- a/wp-content/themes/thepoliticalsage/assets/styles/layout/_page.sass
+++ b/wp-content/themes/thepoliticalsage/assets/styles/layout/_page.sass
@@ -2,12 +2,14 @@ $letterhead-size: 3em
 
 .page
 
-	.page-header>h1
-		text-align: center
-		font-size: 3.5em
-		margin-left: 2rem
-		margin-right: 2rem
-		margin-top: .5em
+	.page-header
+		padding-top: 1em
+		&>h1
+			text-align: center
+			font-size: 3.5em
+			margin-left: 2rem
+			margin-right: 2rem
+			margin-top: .5em
 
 	>.text-wrapper
 		*
