--- a/wp-content/themes/thepoliticalsage/assets/styles/layout/_wrapper.scss
+++ b/wp-content/themes/thepoliticalsage/assets/styles/layout/_wrapper.scss
@@ -12,7 +12,6 @@
 			'-webkit-filter #{_duration(menu)} ease',
 			'opacity 0.375s ease-out'
 		));
-		padding-top: 3.25em;
 
 		&.is-transitioning {
 			opacity: 0;
